--- a/index.html
+++ b/index.html
@@ -180,4 +180,17 @@
     </section>
 
     <!-- Call To Action -->
+    
+        <script>
+
+      var navlinks = document.getElementById("navlinks");
+      function showmenu(){
+        navlinks.style.right = "0";
+      }
+      function hidemenu() {
+        navlinks.style.right = "-200px";
+      }
+
+
+    </script>
   
